// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`minimal block snapshot 1`] = `
[
  {
    "apiVersion": "v1",
    "data": {
      "block.json": "eNpVjsFqwzAQRP9lzkqhV92S2AfjhoSoUHIysrNxFVtaISkGE/zvRSaH9Lpv3uw8Qa43jiDhmD0ErnQzziTDDvKJPvDDQ6Jlth8dWwhMFOJKMX1CYDDuCokdr9CPj6DHlxAhELtfsjpXpdnnN9zeqUs5GthTSIZipk5bekvFFIzrsSzLIpBzOnHInNy0Z3cz/UH7Vax3X8d9rRp1Ud/loakKSAztyN0QN3GOiSwWkTVFXaD0z9meqqYuL/k00AyJc1lUqjltlfo5nos8f5XeKrU3m/hqyuv+AHuDa7Y=",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": {
      "name": "configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
      "namespace": "{{ .Release.Namespace }}",
    },
  },
  {
    "apiVersion": "v1",
    "data": {
      "config.json": "{"config":{"configVersion":"v1","schedule":[{"name":"read","crontab":"* * * * *","allowFailure":true}],"kubernetes":[{"apiVersion":"boom.com/v1","kind":"Boom","executeHookOnEvent":["Added","Modified","Deleted"]}]}}",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": {
      "name": "boom-configmapvolume-block-json-c8b85b34",
      "namespace": "{{ .Release.Namespace }}",
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-operator-serviceaccount-c863141e",
      "namespace": "{{ .Release.Namespace }}",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-operator-clusterrole-c8e55e70",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-operator-clusterrolebinding-c8dd7855",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-operator-clusterrole-c8e55e70",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-operator-serviceaccount-c863141e",
        "namespace": "{{ .Release.Namespace }}",
      },
    ],
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/name": "kblocks-boom-operator",
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "307b132e08b9b0afc29ddad5547520385a5d6ced2ef4a1cd623d19bf99a8e4",
        "configmap-hash-kconfig": "2268192aabebb688bcfb05bdd7f0b25907a056f21afdda92209f1c7747cb02",
      },
      "name": "kblocks-boom-operator",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "minReadySeconds": 0,
      "progressDeadlineSeconds": 600,
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-Operator-Deployment-c810923d",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxSurge": "25%",
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-Operator-Deployment-c810923d",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "307b132e08b9b0afc29ddad5547520385a5d6ced2ef4a1cd623d19bf99a8e4",
            "configmap-hash-kconfig": "2268192aabebb688bcfb05bdd7f0b25907a056f21afdda92209f1c7747cb02",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "REDIS_PASSWORD",
                      "name": "kblocks-api-secrets",
                    },
                  },
                },
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks-system",
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-redis.{{ .Release.Namespace }}.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "WORKERS",
                  "value": "1",
                },
              ],
              "image": "dummy/test-operator-image:latest",
              "imagePullPolicy": "Always",
              "name": "operator",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
                },
              ],
            },
            {
              "image": "redis:6.2-alpine",
              "imagePullPolicy": "IfNotPresent",
              "name": "redis",
              "ports": [
                {
                  "containerPort": 6379,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-operator-serviceaccount-c863141e",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
            },
            {
              "configMap": {
                "name": "boom-configmapvolume-block-json-c8b85b34",
              },
              "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "boom-redis",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "externalIPs": [],
      "ports": [
        {
          "port": 6379,
          "targetPort": 6379,
        },
      ],
      "selector": {
        "cdk8s.io/metadata.addr": "boom-Operator-Deployment-c810923d",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-worker-workerserviceaccount-c8480528",
      "namespace": "{{ .Release.Namespace }}",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-worker-workerclusterrole-c88cb3c8",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-worker-workerclusterrolebinding-c8dc7047",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-worker-workerclusterrole-c88cb3c8",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-worker-workerserviceaccount-c8480528",
        "namespace": "{{ .Release.Namespace }}",
      },
    ],
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "kblocks-boom-worker",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "externalIPs": [],
      "ports": [
        {
          "port": 3000,
        },
      ],
      "selector": {
        "cdk8s.io/metadata.addr": "boom-Worker-WorkerStatefulSet-c8e7278a",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": {
      "labels": {
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "307b132e08b9b0afc29ddad5547520385a5d6ced2ef4a1cd623d19bf99a8e4",
        "configmap-hash-kconfig": "2268192aabebb688bcfb05bdd7f0b25907a056f21afdda92209f1c7747cb02",
      },
      "name": "kblocks-boom-worker",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "minReadySeconds": 0,
      "podManagementPolicy": "OrderedReady",
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-Worker-WorkerStatefulSet-c8e7278a",
        },
      },
      "serviceName": "kblocks-boom-worker",
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-Worker-WorkerStatefulSet-c8e7278a",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "307b132e08b9b0afc29ddad5547520385a5d6ced2ef4a1cd623d19bf99a8e4",
            "configmap-hash-kconfig": "2268192aabebb688bcfb05bdd7f0b25907a056f21afdda92209f1c7747cb02",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "REDIS_PASSWORD",
                      "name": "kblocks-api-secrets",
                    },
                  },
                },
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks-system",
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-redis.{{ .Release.Namespace }}.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "RELEASE_NAME",
                  "value": "{{ .Release.Name }}",
                },
                {
                  "name": "KBLOCK_OUTPUTS_BOOM-COM-V1-BOOMS",
                  "value": "",
                },
                {
                  "name": "WORKER_INDEX",
                  "valueFrom": {
                    "fieldRef": {
                      "fieldPath": "metadata.labels['apps.kubernetes.io/pod-index']",
                    },
                  },
                },
              ],
              "image": "dummy/test-worker-image:latest",
              "imagePullPolicy": "Always",
              "name": "worker",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "startupProbe": {
                "failureThreshold": 3,
                "tcpSocket": {
                  "port": 3000,
                },
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-worker-workerserviceaccount-c8480528",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
            },
            {
              "configMap": {
                "name": "boom-configmapvolume-block-json-c8b85b34",
              },
              "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
            },
          ],
        },
      },
      "updateStrategy": {
        "rollingUpdate": {
          "partition": 0,
        },
        "type": "RollingUpdate",
      },
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-control-serviceaccount-c867682d",
      "namespace": "{{ .Release.Namespace }}",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-control-clusterrole-c822c923",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-control-clusterrolebinding-c839e5e6",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-control-clusterrole-c822c923",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-control-serviceaccount-c867682d",
        "namespace": "{{ .Release.Namespace }}",
      },
    ],
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/name": "kblocks-boom-control",
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "307b132e08b9b0afc29ddad5547520385a5d6ced2ef4a1cd623d19bf99a8e4",
        "configmap-hash-kconfig": "2268192aabebb688bcfb05bdd7f0b25907a056f21afdda92209f1c7747cb02",
      },
      "name": "kblocks-boom-control",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "minReadySeconds": 0,
      "progressDeadlineSeconds": 600,
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-Control-Deployment-c8e74eae",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxSurge": "25%",
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-Control-Deployment-c8e74eae",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "307b132e08b9b0afc29ddad5547520385a5d6ced2ef4a1cd623d19bf99a8e4",
            "configmap-hash-kconfig": "2268192aabebb688bcfb05bdd7f0b25907a056f21afdda92209f1c7747cb02",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "REDIS_PASSWORD",
                      "name": "kblocks-api-secrets",
                    },
                  },
                },
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks-system",
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-redis.{{ .Release.Namespace }}.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "WORKERS",
                  "value": "1",
                },
              ],
              "image": "dummy/test-control-image:latest",
              "imagePullPolicy": "Always",
              "name": "control",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-control-serviceaccount-c867682d",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
            },
            {
              "configMap": {
                "name": "boom-configmapvolume-block-json-c8b85b34",
              },
              "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "apiextensions.k8s.io/v1",
    "kind": "CustomResourceDefinition",
    "metadata": {
      "annotations": {
        "kblocks.io/metadata-namespace": "{{ .Release.Namespace }}",
      },
      "name": "booms.boom.com",
    },
    "spec": {
      "group": "boom.com",
      "names": {
        "kind": "Boom",
        "plural": "booms",
      },
      "scope": "Namespaced",
      "versions": [
        {
          "additionalPrinterColumns": [
            {
              "description": "Is resource ready",
              "jsonPath": ".status.conditions[0].status",
              "name": "Ready",
              "type": "string",
            },
            {
              "description": "The status of the resource",
              "jsonPath": ".status.conditions[0].message",
              "name": "Status",
              "type": "string",
            },
          ],
          "name": "v1",
          "schema": {
            "openAPIV3Schema": {
              "properties": {
                "name": {
                  "type": "string",
                },
                "status": {
                  "properties": {
                    "conditions": {
                      "items": {
                        "properties": {
                          "lastProbeTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "lastTransitionTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "message": {
                            "type": "string",
                          },
                          "reason": {
                            "type": "string",
                          },
                          "status": {
                            "type": "string",
                          },
                          "type": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "type",
                          "status",
                          "lastTransitionTime",
                        ],
                        "type": "object",
                      },
                      "type": "array",
                    },
                    "lastStateHash": {
                      "description": "The hash of the last object state.

@ui hidden",
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
              },
              "type": "object",
            },
          },
          "served": true,
          "storage": true,
          "subresources": {
            "status": {},
          },
        },
      ],
    },
  },
]
`;

exports[`multiple blocks 1`] = `
[
  {
    "apiVersion": "v1",
    "data": {
      "block.json": "eNpNj81uwjAQhN9lz04lcswNgltFlB9hRMUpMmZJ3RDbsk2qCOXdqzUgetydmW9nb4Cm0QahAGOtAwYnPGujo7YGihs03l4dFHC0tntTtgMGPfqQVOgnwKDV5gQFzGwS3eXq5eURCMAgqG/sJKHi4OiMPf6gimT11qGPGgOpRnb4zxWi16aBcRxHBuST0fqnLzipyNQN2WtkgKYXqDzGBBS83PLdhFhpmVHZ+zJ/LXNgsJh9rsuFqKebql7wA4VbHKCALZ9Xot5Mhfhab+f0TApBAe3xYlUbMul0Fh43qSmavrTmrJuldKlFuV69Vx/L6YaKqCR10qUuz7PiIHZ8WVfzf9wwhIgd3InE4as9EdD0KctX+/wx5uT6tb5FH6DIx/EPDz+Wcg==",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": {
      "name": "configmapvolume-block-json-boom-com-v1-booms-c8339f53",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "v1",
    "data": {
      "block.json": "eNpNj0tvwjAQhP/LnpNK5JgbTdwqojyEERWnyCRL6gY/ZJtUEcp/r9aA4Lg7M9/OXgF1JzVCDtoYCwm0eJJaBmk05FfonLlYyKE1Rr01RkECAzofVRhmkEAvdQs5lCaK9nxx4nwPeEjANz+oBKHCaOmMOf5iE8jqjEUXJHpStVD44vLBSd3BNE1TAuQTwbiHz1vRkEmN6XNMAPXAsXEYIpCzYst2M2LFZUplb8vsucwggcX717pY8Hq+qeoFO1C4xxFy2LKy4vVmzvn3elvSMzEEOfTHs2l6nworU3+/SU1RD4XRJ9kthY0tivXqo/pczjdUpImSEjZ2eZzlB75jy7oqX7h+9AEV3IjEYas9EVAPMctW++w+ZuT6M65H5yHPpukfGJ2WeA==",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": {
      "name": "configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "v1",
    "data": {
      "config.json": "{"config":{"configVersion":"v1","schedule":[{"name":"read","crontab":"* * * * *","allowFailure":true}],"kubernetes":[{"apiVersion":"boom.com/v1","kind":"Boom","executeHookOnEvent":["Added","Modified","Deleted"]},{"apiVersion":"doom.com/v1","kind":"Doom","executeHookOnEvent":["Added","Modified","Deleted"]}]}}",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": {
      "name": "boom-doom-configmapvolume-block-json-c839368f",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-doom-operator-serviceaccount-c8800f81",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-doom-operator-clusterrole-c82fd034",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-doom-operator-clusterrolebinding-c8e87e11",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-doom-operator-clusterrole-c82fd034",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-doom-operator-serviceaccount-c8800f81",
        "namespace": "my-namespace",
      },
    ],
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/name": "kblocks-boom-doom-operator",
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "d8fca2f7c1de675eb8f8ba6e2945954a11ee21f47e43b215604cc2d151f909",
        "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "308fc4a9c14fb024d94b42b45b0ca7530e32100826f12bb8923c65651aafbe",
        "configmap-hash-kconfig": "c62f5ec5abfce93189ea13522d69d430372b88ecad137405dee39f2ea47da4",
      },
      "name": "kblocks-boom-doom-operator",
      "namespace": "my-namespace",
    },
    "spec": {
      "minReadySeconds": 0,
      "progressDeadlineSeconds": 600,
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-doom-Operator-Deployment-c81ed77e",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxSurge": "25%",
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-doom-Operator-Deployment-c81ed77e",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "d8fca2f7c1de675eb8f8ba6e2945954a11ee21f47e43b215604cc2d151f909",
            "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "308fc4a9c14fb024d94b42b45b0ca7530e32100826f12bb8923c65651aafbe",
            "configmap-hash-kconfig": "c62f5ec5abfce93189ea13522d69d430372b88ecad137405dee39f2ea47da4",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "SECRET1",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET1",
                      "name": "secret-1",
                    },
                  },
                },
                {
                  "name": "SECRET2",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET2",
                      "name": "secret-2",
                    },
                  },
                },
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "REDIS_PASSWORD",
                      "name": "kblocks-api-secrets",
                    },
                  },
                },
                {
                  "name": "CONFIGMAP1",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "CONFIGMAP1",
                      "name": "configmap-1",
                    },
                  },
                },
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks-system",
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-doom-redis.my-namespace.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ENV1",
                  "value": "env-1",
                },
                {
                  "name": "ENV2",
                  "value": "env-2",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "WORKERS",
                  "value": "2",
                },
              ],
              "image": "dummy/test-operator-image:latest",
              "imagePullPolicy": "Always",
              "name": "operator",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
                },
                {
                  "mountPath": "/kblock-DOOM-COM-V1-DOOMS",
                  "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
                },
              ],
            },
            {
              "image": "redis:6.2-alpine",
              "imagePullPolicy": "IfNotPresent",
              "name": "redis",
              "ports": [
                {
                  "containerPort": 6379,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-doom-operator-serviceaccount-c8800f81",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c8339f53",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
            },
            {
              "configMap": {
                "name": "configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
              },
              "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
            },
            {
              "configMap": {
                "name": "boom-doom-configmapvolume-block-json-c839368f",
              },
              "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "boom-doom-redis",
      "namespace": "my-namespace",
    },
    "spec": {
      "externalIPs": [],
      "ports": [
        {
          "port": 6379,
          "targetPort": 6379,
        },
      ],
      "selector": {
        "cdk8s.io/metadata.addr": "boom-doom-Operator-Deployment-c81ed77e",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-doom-worker-workerserviceaccount-c8d18f73",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-doom-worker-workerclusterrole-c80e38e3",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-doom-worker-workerclusterrolebinding-c858e5e5",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-doom-worker-workerclusterrole-c80e38e3",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-doom-worker-workerserviceaccount-c8d18f73",
        "namespace": "my-namespace",
      },
    ],
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "kblocks-boom-doom-worker",
      "namespace": "my-namespace",
    },
    "spec": {
      "externalIPs": [],
      "ports": [
        {
          "port": 3000,
        },
      ],
      "selector": {
        "cdk8s.io/metadata.addr": "boom-doom-Worker-WorkerStatefulSet-c8da4c4c",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": {
      "labels": {
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "d8fca2f7c1de675eb8f8ba6e2945954a11ee21f47e43b215604cc2d151f909",
        "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "308fc4a9c14fb024d94b42b45b0ca7530e32100826f12bb8923c65651aafbe",
        "configmap-hash-kconfig": "c62f5ec5abfce93189ea13522d69d430372b88ecad137405dee39f2ea47da4",
      },
      "name": "kblocks-boom-doom-worker",
      "namespace": "my-namespace",
    },
    "spec": {
      "minReadySeconds": 0,
      "podManagementPolicy": "OrderedReady",
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-doom-Worker-WorkerStatefulSet-c8da4c4c",
        },
      },
      "serviceName": "kblocks-boom-doom-worker",
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-doom-Worker-WorkerStatefulSet-c8da4c4c",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "d8fca2f7c1de675eb8f8ba6e2945954a11ee21f47e43b215604cc2d151f909",
            "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "308fc4a9c14fb024d94b42b45b0ca7530e32100826f12bb8923c65651aafbe",
            "configmap-hash-kconfig": "c62f5ec5abfce93189ea13522d69d430372b88ecad137405dee39f2ea47da4",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "SECRET1",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET1",
                      "name": "secret-1",
                    },
                  },
                },
                {
                  "name": "SECRET2",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET2",
                      "name": "secret-2",
                    },
                  },
                },
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "REDIS_PASSWORD",
                      "name": "kblocks-api-secrets",
                    },
                  },
                },
                {
                  "name": "CONFIGMAP1",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "CONFIGMAP1",
                      "name": "configmap-1",
                    },
                  },
                },
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks-system",
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-doom-redis.my-namespace.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ENV1",
                  "value": "env-1",
                },
                {
                  "name": "ENV2",
                  "value": "env-2",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "RELEASE_NAME",
                  "value": "{{ .Release.Name }}",
                },
                {
                  "name": "KBLOCK_OUTPUTS_BOOM-COM-V1-BOOMS",
                  "value": "",
                },
                {
                  "name": "KBLOCK_OUTPUTS_DOOM-COM-V1-DOOMS",
                  "value": "",
                },
                {
                  "name": "WORKER_INDEX",
                  "valueFrom": {
                    "fieldRef": {
                      "fieldPath": "metadata.labels['apps.kubernetes.io/pod-index']",
                    },
                  },
                },
              ],
              "image": "dummy/test-worker-image:latest",
              "imagePullPolicy": "Always",
              "name": "worker",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "startupProbe": {
                "failureThreshold": 3,
                "tcpSocket": {
                  "port": 3000,
                },
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
                },
                {
                  "mountPath": "/kblock-DOOM-COM-V1-DOOMS",
                  "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-doom-worker-workerserviceaccount-c8d18f73",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c8339f53",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
            },
            {
              "configMap": {
                "name": "configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
              },
              "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
            },
            {
              "configMap": {
                "name": "boom-doom-configmapvolume-block-json-c839368f",
              },
              "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
            },
          ],
        },
      },
      "updateStrategy": {
        "rollingUpdate": {
          "partition": 0,
        },
        "type": "RollingUpdate",
      },
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-doom-control-serviceaccount-c8607aa4",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-doom-control-clusterrole-c818af1f",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-doom-control-clusterrolebinding-c8446c9c",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-doom-control-clusterrole-c818af1f",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-doom-control-serviceaccount-c8607aa4",
        "namespace": "my-namespace",
      },
    ],
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/name": "kblocks-boom-doom-control",
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "d8fca2f7c1de675eb8f8ba6e2945954a11ee21f47e43b215604cc2d151f909",
        "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "308fc4a9c14fb024d94b42b45b0ca7530e32100826f12bb8923c65651aafbe",
        "configmap-hash-kconfig": "c62f5ec5abfce93189ea13522d69d430372b88ecad137405dee39f2ea47da4",
      },
      "name": "kblocks-boom-doom-control",
      "namespace": "my-namespace",
    },
    "spec": {
      "minReadySeconds": 0,
      "progressDeadlineSeconds": 600,
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-doom-Control-Deployment-c87e3b0f",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxSurge": "25%",
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-doom-Control-Deployment-c87e3b0f",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "d8fca2f7c1de675eb8f8ba6e2945954a11ee21f47e43b215604cc2d151f909",
            "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "308fc4a9c14fb024d94b42b45b0ca7530e32100826f12bb8923c65651aafbe",
            "configmap-hash-kconfig": "c62f5ec5abfce93189ea13522d69d430372b88ecad137405dee39f2ea47da4",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "SECRET1",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET1",
                      "name": "secret-1",
                    },
                  },
                },
                {
                  "name": "SECRET2",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET2",
                      "name": "secret-2",
                    },
                  },
                },
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "REDIS_PASSWORD",
                      "name": "kblocks-api-secrets",
                    },
                  },
                },
                {
                  "name": "CONFIGMAP1",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "CONFIGMAP1",
                      "name": "configmap-1",
                    },
                  },
                },
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks-system",
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-doom-redis.my-namespace.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ENV1",
                  "value": "env-1",
                },
                {
                  "name": "ENV2",
                  "value": "env-2",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "WORKERS",
                  "value": "2",
                },
              ],
              "image": "dummy/test-control-image:latest",
              "imagePullPolicy": "Always",
              "name": "control",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
                },
                {
                  "mountPath": "/kblock-DOOM-COM-V1-DOOMS",
                  "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-doom-control-serviceaccount-c8607aa4",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c8339f53",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
            },
            {
              "configMap": {
                "name": "configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
              },
              "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
            },
            {
              "configMap": {
                "name": "boom-doom-configmapvolume-block-json-c839368f",
              },
              "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "apiextensions.k8s.io/v1",
    "kind": "CustomResourceDefinition",
    "metadata": {
      "annotations": {
        "kblocks.io/metadata-namespace": "my-namespace",
      },
      "name": "booms.boom.com",
    },
    "spec": {
      "group": "boom.com",
      "names": {
        "kind": "Boom",
        "plural": "booms",
      },
      "scope": "Namespaced",
      "versions": [
        {
          "additionalPrinterColumns": [
            {
              "description": "Is resource ready",
              "jsonPath": ".status.conditions[0].status",
              "name": "Ready",
              "type": "string",
            },
            {
              "description": "The status of the resource",
              "jsonPath": ".status.conditions[0].message",
              "name": "Status",
              "type": "string",
            },
          ],
          "name": "v1",
          "schema": {
            "openAPIV3Schema": {
              "properties": {
                "name": {
                  "type": "string",
                },
                "status": {
                  "properties": {
                    "conditions": {
                      "items": {
                        "properties": {
                          "lastProbeTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "lastTransitionTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "message": {
                            "type": "string",
                          },
                          "reason": {
                            "type": "string",
                          },
                          "status": {
                            "type": "string",
                          },
                          "type": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "type",
                          "status",
                          "lastTransitionTime",
                        ],
                        "type": "object",
                      },
                      "type": "array",
                    },
                    "lastStateHash": {
                      "description": "The hash of the last object state.

@ui hidden",
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
              },
              "type": "object",
            },
          },
          "served": true,
          "storage": true,
          "subresources": {
            "status": {},
          },
        },
      ],
    },
  },
  {
    "apiVersion": "apiextensions.k8s.io/v1",
    "kind": "CustomResourceDefinition",
    "metadata": {
      "annotations": {
        "kblocks.io/metadata-namespace": "my-namespace",
      },
      "name": "dooms.doom.com",
    },
    "spec": {
      "group": "doom.com",
      "names": {
        "kind": "Doom",
        "plural": "dooms",
      },
      "scope": "Namespaced",
      "versions": [
        {
          "additionalPrinterColumns": [
            {
              "description": "Is resource ready",
              "jsonPath": ".status.conditions[0].status",
              "name": "Ready",
              "type": "string",
            },
            {
              "description": "The status of the resource",
              "jsonPath": ".status.conditions[0].message",
              "name": "Status",
              "type": "string",
            },
          ],
          "name": "v1",
          "schema": {
            "openAPIV3Schema": {
              "properties": {
                "name": {
                  "type": "string",
                },
                "status": {
                  "properties": {
                    "conditions": {
                      "items": {
                        "properties": {
                          "lastProbeTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "lastTransitionTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "message": {
                            "type": "string",
                          },
                          "reason": {
                            "type": "string",
                          },
                          "status": {
                            "type": "string",
                          },
                          "type": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "type",
                          "status",
                          "lastTransitionTime",
                        ],
                        "type": "object",
                      },
                      "type": "array",
                    },
                    "lastStateHash": {
                      "description": "The hash of the last object state.

@ui hidden",
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
              },
              "type": "object",
            },
          },
          "served": true,
          "storage": true,
          "subresources": {
            "status": {},
          },
        },
      ],
    },
  },
]
`;
